Align ExtractVersionConstraints with 3.2.x
See gh-40551